--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -76,4 +76,25 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+*,
+:before,
+:after {
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+*:not(dialog) {
+  margin: 0;
+}
+
+html,
+body,
+#app {
+  height: 100dvh;
+  width: 100vw;
+  overflow-x: hidden;
+  background-color: #0a0a0a;
 }
